--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "picqer/php-barcode-generator": "^2.4"
+        "picqer/php-barcode-generator": "^2.4",
+        "yoeunes/toastr": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
