--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "picqer/php-barcode-generator": "^2.4",
         "yoeunes/toastr": "^3.0"
     },
