--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
+        "milon/barcode": "^11.0",
         "picqer/php-barcode-generator": "^2.4",
         "yoeunes/toastr": "^3.0"
     },
